umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@chemdraw_Clade_6.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 31"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 31"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C2
    atom_count: 4
    bond_count: 3
    extended_atoms: 2
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C2
    atom_count: 4
    bond_count: 3
    extended_atoms: 2
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
